# anilistWrapPY

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
anilistWrapPY/: __init__.py  client.py
anilistWrapPY/Airing/: graphql.py  request.py  types.py
anilistWrapPY/Anime/: graphql.py  request.py  types.py
anilistWrapPY/Character/: graphql.py  request.py  types.py
anilistWrapPY/Manga/: graphql.py  request.py  types.py
anilistWrapPY/Media/: graphql.py  request.py  types.py
anilistWrapPY/User/: graphql.py  request.py  types.py
anilistWrapPY/errors/: __init__.py  ex_class.py  types.py
anilistWrapPY/utils/: __init__.py  utils.py
src/Media/: request.py
