[tool.poetry]
name = "anilistwrappy"
version = "0.0.1"
description = "An API Wrapper for Official Anilist.co GraphQL API"
authors = ["Sayan Biswas <sayan@pokurt.me>"]
license = "Unlicense License"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
